# openanalytics

./: Dockerfile  LICENSE  Procfile  README.md  README_LOCAL_TESTING.md  SETUP.md  START_SERVICES.md  ai_client.py  app.py  company_service.py  fetcher.py  gemini_client.py  health_service.py  logo_detector.py  main.py  master_aeo_service.py  mentions_service.py  pdf_export.py  pyproject.toml  quick_test.sh  railway.json  requirements.txt  run_local.sh  scoring.py  serp_dataforseo.py  serp_types.py  tech_detector.py  test_app.py  test_local.py  test_report_data.json  test_report_standalone.py  tool_executor.py  url_extractor.py
aeo-checks/: .gitleaks.toml  .pre-commit-config.yaml  bypass-test-1.py  capture-aeo-analytics.js  capture-query-results.js  cli.py  complete_analysis.py  find-aeo-interface.js  main.py  mentions_service.py  modal_deploy.py  pyproject.toml  screenshot-aeo-detailed.js  screenshot-aeo.js  setup-security-hooks.sh  test-scaile-aeo-mentions.js
aeo-checks/.github/workflows/: codeql-analysis.yml  dependency-review.yml
checks/: __init__.py  aeo_crawler.py  authority.py  structured_data.py  technical.py
reports/: README.md  components.py  design_system.py  html_generator.py  styles.css
