[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openanalytics"
version = "4.0.0"
description = "AEO Health Checks & AI Mentions Analysis - Comprehensive website analysis for Answer Engine Optimization"
readme = "README.md"
license = "MIT"
authors = [
    { name = "OpenAnalytics", email = "hello@openanalytics.dev" }
]
keywords = ["aeo", "seo", "health-check", "ai", "mentions", "schema", "structured-data", "visibility", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.5.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "cairosvg>=2.7.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
openanalytics = "cli:main"

[project.urls]
Homepage = "https://github.com/federicodeponte/openanalytics"
Repository = "https://github.com/federicodeponte/openanalytics"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
